# kwin-effect-match-titlebar

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MatchTitlebar.cpp  MatchTitlebar.hpp  metadata.json  plugin.cpp
